# internet_route_verification_server

./: .gitignore  README.md  db_design.md  demo_v1.sql  demo_v1_EDR.pgerd  description.md  dump_db.sh  er_model_and_relational_model.md  main.bib  queries for restAPI endpoint.sql  restore_db.sh  software-requirement.tex  trigger_only.sql
flask_RestAPI/: app.py  init_db.py
flask_RestAPI/templates/: about.html  base.html  index.html  query_as_set.html  query_page.html  query_result.html
route_verification_server/: .env  Cargo.toml
route_verification_server/src/: main.rs
route_verification_server_loader/: Cargo.toml
route_verification_server_loader/src/: main.rs
