[package]
name = "route_verification_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
encoding_rs = "0.8.32"
encoding_rs_io = "0.1.7"
env_logger = "0"
log = "0"
route_verification = "0.2"
serde_json = "1"
sqlx = { version = "0.7", features = [
    "ipnetwork",
    "postgres",
    "runtime-tokio",
] }
tokio = { version = "1", features = ["full"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
